v1.4 (XXXX-XX-XX)
==================

- Allowed array inputs to dust maps derived from HierarchicalHealpixMap
  (GreenX and CombinedX maps) and use vectorization to speed these up signficantly.

v1.3 (2023-03-07)
==================

- Re-jiggered the way dust maps are downloaded. They are now downloaded
  upon first use of a dust map rather than at install time. This makes 
  it possible to create installable wheels for mwdust.

- Added custom implementation of most of the necessary healpy functions
  to avoid the need for healpy as a dependency. This makes it possible
  to compile and use mwdust on Windows (where healpy is unavailable).

- Added binary wheels for all major platforms (Linux, MacOS, Windows).

v1.2 (2023-02-21)
==================

- Switched to using cURL for downloading dust maps.

- Updated Drimmel et al. data link to stable zenodo link.

- Improved Windows support: SFD code can now be fully compiled and 
  installed on Windows.

- Add tqdm progress bar when evaluating SFD with multiple values.

- Allow SFD C code to be KeyboardInterrupted.
  
- Replaced asciitable dependency with astropy's ascii module.

- Improvements to GitHub Actions CI runs.

v1.1 (2019-12-10)
==================

- Full Python 3 support (added custom version of fortranfile module to
  make it Python 3 compatible).

- Add Green17 (Bayestar17) and Green19 (Bayestar19) maps from Green et
  al. (2018) and Green et al. (2019), respectively.

- Add new compbined map Combined19, similar to Combined15, but using
  Green19 instead of Green15 (added by Jan Rybizki).

- Added function to plot the sky dependence of dust maps derived from
  HierarchicalHealpixMap (GreenX and CombinedX maps): plot_mollweide.

- Update of the SFD URL to a more stable version.

v1.0 (2015-12-28)
==================

- First release; stable API of various extinction maps.